--- a/RabbitMessenger/app/src/main/res/layout/activity_login.xml
+++ b/RabbitMessenger/app/src/main/res/layout/activity_login.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.lemax333.rabbitmessenger.ui.activities.LoginActivity">
+    tools:mContext="com.lemax333.rabbitmessenger.ui.activities.LoginActivity">
 
     <!-- Login progress -->
     <ProgressBar
